# soa

./: CMakeLists.txt  README.md  bit_vector.hpp  bit_vector.test.cpp  bitsof.hpp  codepad.eol6auRN.cpp  enum_sequence.hpp  index_type_buf.hpp  soa_block.cpp  soa_block.hpp  soa_block.test.cpp  soa_compare.benchmark.cpp  sse.hpp  udt.hpp  udt.test.cpp  vec_offsets.hpp  vec_offsets.test.cpp
